Closed
Bug 908386
Opened 12 years ago
Closed 12 years ago
Distortion on H.264 videos in Windows 7
Categories
(Core :: Audio/Video, defect)
Tracking
()
VERIFIED
FIXED
mozilla26
People
(Reporter: dylananglada, Assigned: cpearce)
References
Details
Attachments
(2 files)
33.51 KB,
image/png
|
Details | |
1.45 KB,
patch
|
padenot
:
review+
bajaj
:
approval-mozilla-aurora+
bajaj
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:23.0) Gecko/20100101 Firefox/23.0 (Beta/Release)
Build ID: 20130814063812
Steps to reproduce:
1) Visit this link: http://ie.microsoft.com/testdrive/graphics/videoformatsupport/default.html
2) Click the "play" button on video under "H.264 high profile (HTML5 video)"
Actual results:
Visual distortions appear on right side of the video; green lines. See attached screenshot.
Expected results:
Video should display properly without distortions and artifacts.
![]() |
Reporter | |
Updated•12 years ago
|
Severity: normal → minor
![]() |
Reporter | |
Updated•12 years ago
|
Summary: Experiencing similar or identical problems to those described in Bug 901944 (Distortions on H.264 videos) → Experiencing similar or identical problems to those described in Bug 901944 (Distortions on H.264 videos) in Windows 7
![]() |
Reporter | |
Updated•12 years ago
|
Severity: minor → normal
![]() |
Reporter | |
Updated•12 years ago
|
Component: Untriaged → Video/Audio
Product: Firefox → Core
![]() |
Reporter | |
Updated•12 years ago
|
Summary: Experiencing similar or identical problems to those described in Bug 901944 (Distortions on H.264 videos) in Windows 7 → Distortion on H.264 videos in Windows 7
![]() |
Reporter | |
Comment 1•12 years ago
|
||
Also, here are the parameters from the Graphics section of about:support
ADAPTER DESCRIPTION: Mobile Intel(R) 965 Express Chipset Family
ADAPTER DRIVERS: igdumdx32 igd10umd32
ADAPTER RAM: Unknown
CLEARTYPE PARAMETERS: DISPLAY1 [ Gamma: 2200 Pixel Structure: RGB ClearType Level: 100 Enhanced Contrast: 300 ] DISPLAY2 [ Gamma: 2200 Pixel Structure: RGB ClearType Level: 100 Enhanced Contrast: 100 ]
DEVICE ID: 0x2a02
DIRECT2D ENABLED: Blocked for your graphics driver version.
DIRECTWRITE ENABLED: false (6.2.9200.16571)
DRIVER DATE: 9-23-2009
DRIVER VERSION: 8.15.10.1930
GPU#2 ACTIVE: false
GPU ACCELERATED WINDOWS: 2/2 Direct3D 9
VENDOR ID: 0x8086
WEBGL RENDERER: Google Inc. -- ANGLE (Mobile Intel(R) 965 Express Chipset Family)
AZURECANVASBACKEND: skia
AZURECONTENTBACKEND: none
AZUREFALLBACKCANVASBACKEND: cairo
Assignee | ||
Comment 2•12 years ago
|
||
Thanks for filing this bug.
If you open about:config in the URL bar, and set the pref "media.windows-media-foundation.use-dxva" to "false", does the problem go away?
According to the info you posted above, your graphics driver is 4 years old. If you update your graphics driver, does the problem go away?
![]() |
Reporter | |
Comment 3•12 years ago
|
||
(In reply to Chris Pearce (:cpearce) from comment #2)
> Thanks for filing this bug.
>
> If you open about:config in the URL bar, and set the pref
> "media.windows-media-foundation.use-dxva" to "false", does the problem go
> away?
Yes, the problem does go away.
> According to the info you posted above, your graphics driver is 4 years old.
> If you update your graphics driver, does the problem go away?
As far as I can tell, Intel has not released a more recent version of the driver.
Assignee | ||
Comment 4•12 years ago
|
||
OK, thanks.
What device are you running this on? A laptop? Which model?
![]() |
Reporter | |
Comment 5•12 years ago
|
||
> As far as I can tell, Intel has not released a more recent version of the
> driver.
Scratch that I found a slightly newer version. Let me try that.
![]() |
Reporter | |
Comment 6•12 years ago
|
||
(In reply to Chris Pearce (:cpearce) from comment #4)
> OK, thanks.
>
> What device are you running this on? A laptop? Which model?
I am running a laptop. It's a bit old. Dell Inspiron 1525, Intel Core 2 Duo T8100 @ 2.10 GHz, 3.0 GB RAM, Windows 7 SP1 32-bit.
![]() |
Reporter | |
Comment 7•12 years ago
|
||
(In reply to Dylan Anglada from comment #5)
> > As far as I can tell, Intel has not released a more recent version of the
> > driver.
>
> Scratch that I found a slightly newer version. Let me try that.
Disregard. The driver I initially listed IS the most recent version.
Assignee | ||
Comment 8•12 years ago
|
||
I have ordered a second hand Inspiron 1525, hopefully I will be able to reproduce the bug and fix it.
![]() |
Reporter | |
Comment 9•12 years ago
|
||
> I have ordered a second hand Inspiron 1525, hopefully I will be able to reproduce the bug and fix it.
Haha, wow! That's dedication!
![]() |
Reporter | |
Comment 10•12 years ago
|
||
Also, to be clear: It is displaying this error on both H.264 High Profile and H.264 Baseline Profile videos, if that helps.
Assignee | ||
Comment 11•12 years ago
|
||
The Inspiron 1525 arrived. I was able to confirm that this is the same problem as bug 901944, which is fixed in Firefox 26. I'd previously thought this problem only occurred on nvidia GPUs on Vista, it's good to know otherwise. We'd disabled DXVA on Vista due to this issue, I'm not sure if we want to disable it on Win7 too, I will check with release management.
In the meantime you can work around this issue by setting setting the pref media.windows-media-foundation.use-dxva to "false" when you load about:config in the URL bar.
Note bug 878030, this issue occurs on Win7 on at least the following GPUs, with the most up-to-date drivers:
Intel(R) G41 Express Chipset
Mobile Intel(r) 965 Express Chipset
status-firefox23:
--- → affected
status-firefox24:
--- → affected
status-firefox25:
--- → affected
status-firefox26:
--- → fixed
tracking-firefox23:
--- → ?
tracking-firefox24:
--- → ?
tracking-firefox25:
--- → ?
Assignee | ||
Comment 13•12 years ago
|
||
OK, this isn't quite the same problem as bug 901944. In bug 901944 setting the DXVA2 device manager on the decoder was returning MF_E_TRANSFORM_TYPE_NOT_SET, but was still successful. Whereas here that same function call is failing and returning a generic E_FAIL error code.
The reason that the patch in bug 901944 appears to fix this is I also added code there to ensure that we reconfigure the decoder to fallback to software decoding if we fail to initialize DXVA. I think that we should take that part of my patch for bug 901944 on Aurora and Beta, and possibly release if we're going to roll another 23.x release.
We probably don't need to roll a special point release just for this, unless we can determine that the G41 and 965 chipsets are very common.
Assignee | ||
Comment 14•12 years ago
|
||
This patch ensures we correctly reconfigure the WMF decoder for software rendering if DXVA initialization fails.
This is an Aurora (Firefox 25) patch. I've tested this locally on an affected machine, and we fallback to (correctly working) software decoding/rendering.
Assignee: nobody → cpearce
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #796395 -
Flags: review?(paul)
Assignee | ||
Comment 15•12 years ago
|
||
Comment on attachment 796395 [details] [diff] [review]
Aurora & Beta Patch: Properly reconfigure decoder video output type when DXVA init fails
This patch also applies cleanly to Beta. We should take it there too.
Attachment #796395 -
Attachment description: Aurora Patch: Properly reconfigure decoder video output type when DXVA init fails → Aurora & Beta Patch: Properly reconfigure decoder video output type when DXVA init fails
Comment 16•12 years ago
|
||
Comment on attachment 796395 [details] [diff] [review]
Aurora & Beta Patch: Properly reconfigure decoder video output type when DXVA init fails
Review of attachment 796395 [details] [diff] [review]:
-----------------------------------------------------------------
::: content/media/wmf/WMFReader.cpp
@@ +604,5 @@
> + // is set correctly to reflect that hardware acceleration is disabled.
> + // Without this, we'd be running with !mUseHwAccel and the output format
> + // set to NV12, which is the format we expect when using hardware
> + // acceleration. This would cause us to misinterpret the frame contents.
> + hr = ConfigureVideoDecoder();
nit: trailing spaces.
Attachment #796395 -
Flags: review?(paul) → review+
Updated•12 years ago
|
Updated•12 years ago
|
Assignee | ||
Comment 17•12 years ago
|
||
Comment on attachment 796395 [details] [diff] [review]
Aurora & Beta Patch: Properly reconfigure decoder video output type when DXVA init fails
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 847267, hardware accelerated video decoding on Windows
User impact if declined: Some users of older Intel GPUs will have video incorrectly displayed on Windows 7.
Testing completed (on m-c, etc.): This change was landed on m-c on 2013-08-13 as part of the fix for bug 901944. I have tested this locally with an old laptop with an affected GPU.
Risk to taking this patch (and alternatives if risky): Low, this change makes us re-run some code we're already running in our video decoding initialization path.
String or IDL/UUID changes made by this patch: None.
Attachment #796395 -
Flags: approval-mozilla-beta?
Attachment #796395 -
Flags: approval-mozilla-aurora?
Comment 18•12 years ago
|
||
Comment on attachment 796395 [details] [diff] [review]
Aurora & Beta Patch: Properly reconfigure decoder video output type when DXVA init fails
Given this is lowrisk and I've discussed this offline with :cpearce in addition to understand the risk here.We are going to request some QA help on this based on Chris's suggestion of the testcases to get this patch well tested.
Also I am approving given so this can get into tomorrow's beta and giving us enough coverage on our beta tester's.If we see any worse regression's we will have an opportunity to backout if needed.
Attachment #796395 -
Flags: approval-mozilla-beta?
Attachment #796395 -
Flags: approval-mozilla-beta+
Attachment #796395 -
Flags: approval-mozilla-aurora?
Attachment #796395 -
Flags: approval-mozilla-aurora+
Comment 19•12 years ago
|
||
Adding Tracy as QA contact and requesting coverage of
H.264 decoding on machines with older Intel Graphics chips, if we have
any such hardware at hand,.:Cpearce feel free to add anything that I may have missed adding.
"QA can tests H.264 video easily by setting the pref media.webm.enabled
to "false", entering the Youtube HTML5 trial at
http://www.youtube.com/html5, and then watching YouTube videos using the
HTML5 player. Most but not all videos without ads will then play using
the HTML5 player, you can tell if a video is using Flash or HTML5 by
right clicking on it, and if there's an "about Adobe Flash Player" item
on the context menu then you're using Flash player. They may need to try
a few different videos to find one that doesn't use the Flash player."
Updated•12 years ago
|
Comment 20•12 years ago
|
||
Updated•12 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
![]() |
||
Comment 21•12 years ago
|
||
Dropping qawanted keyword since verification is covered by the verifyme keyword. If something more is needed please re-add qawanted and specify the request. Thank you.
Keywords: qawanted
Comment 22•12 years ago
|
||
verified on Win 7 with 24beta7
Comment 24•12 years ago
|
||
I could not reproduce the initial issue on a PC running with an ATI Radeon HD 5450 video card on Windows 7.
Dylan, since you were able to reproduce the issue, could you please check this is verified on Firefox 25 beta 1 and on Firefox 26.0a2?
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/25.0b1-candidates/build1/
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-mozilla-aurora/
Flags: needinfo?
![]() |
||
Comment 25•12 years ago
|
||
Simona, please remember to set a requestee for the need-info field.
Dylan, are you able to reproduce this with either of the builds in comment 24?
Flags: needinfo?
Comment 26•12 years ago
|
||
User Agent Mozilla/5.0 (Windows NT 6.1; rv:25.0) Gecko/20100101 Firefox/25.0
Build ID: 20130923194050
Verified on Firefox 25 Beta 2 and issue is no longer reproducing. Also verified on aurora and the issue is gone.
The issue was reproducing with Firefox 23 on the system I've tested.
Marking as verified, if someone else still sees the glitches please reopen this issue.
![]() |
||
Comment 27•12 years ago
|
||
Hi Guys,
Thank you for all your help on this. I reported it originally (or equivalent post) and have since done and update and rechecked and it all looks fine.
Thanks for fixing that.
Antony
You need to log in
before you can comment on or make changes to this bug.
Description
•