Bug 908386 - Reconfigure the H.264 decoder if DXVA initialization fails, so that we properly interpret frame contents. r=padenot, a=bajaj